2007-03-17  Hans Breuer  <hans@breuer.org>

	* app/filedlg.c : plugged some leaks and made the filter sensitive 
	extension update work, by relying less on what we get back from gtk+
	Fixes bug #403195.

	  [some playing with valgrind : memory leaks]
	* lib/text.c(text_set_line_text) : removed superfluous g_strdup()
	* app/interface.c : gtk_accelerator_get_label() and g_strconcat()
	return newly allocated strings and gtk_tooltips_set_tip() does not
	free them
	  [jump or move depends on uninitialised value(s)]
	* objects/network/radiocell.c : dont call polyshape_update_data()
	without initialized points

	* plug-ins/python/aobjects.py : somehow an extra 'd' got commited :)

	* plug-ins/python/aobjects.py plug-ins/python/Makefile.am : 
	Self Documenation Part III and stress test, creates all Dia Objects
	* objects/FS/flow-ortho.c objects/FS/flow.c : removed partial
	left over of 'static DiaFont*' which caused a crash on creation

	* objects/UML/umlattribute.c objects/UML/umlformalparameter.c
	  objects/UML/umloperation.c : don't crash on name being NULL

	* objects/custom/custom_object.c : call *_update_data in *_copy
	Fixes the disappearance of object drawing after cut&paste
	(bug #416414, Stein Somers)

	* plug-ins/python/pydia-font.c : cmpfunc is supposed to return out
	of (-1, 0, 1)

	* lib/utils.h lib/message.h : added C++ guards

2007-03-17  Steffen Macke <sdteffen@gmail.com>

	* installer/win32/locale/slovak.nsh: Use Codepage 1250, fixed errors

2007-03-16  Lars Clausen  <lars@raeder.dk>

	* NEWS: 
	* RELEASE-PROCESS: 
	* config.h.win32: 
	* doc/en/dia.xml: 
	* doc/pl/dia.xml: 
	* doc/eu/dia.xml:
	* configure.in: Pre8?  Really?  Furrfu!

	* doc/en/Makefile.am (dia.1): Allow net access for getting the
	XSLT.  Let's see if it causes more problems than it solves.  Fixes
	bug #391545.

	* app/textedit.c (textedit_remove_focus): Do not free that which
	has not been allocated (focus!).  Fixes bug #418188.

	* plug-ins/pgf/render_pgf.c (draw_*_with_arrows): Don't