@@ -1,5 +1,9 @@
 2007-03-17  Hans Breuer  <hans@breuer.org>
 
+	* plug-ins/python/aobjects.py : if created a diagram, display it ...
+	* app/display.c : ... and don't crash with display update before we
+	had the chance to reate a renderer.
+
 	* app/filedlg.c : plugged some leaks and made the filter sensitive 
 	extension update work, by relying less on what we get back from gtk+
 	Fixes bug #403195.
